--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+.selection {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+.selection h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+.selection h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+.selection nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.selection nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.selection nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -188,13 +188,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+.signature {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+.signature h2 {
     font-size: 20px;
 }
